...
                                    .tracking(0.28)
                                    .padding(.horizontal, 16.w)
                                    .frame(width: 300.w, height: 48.h)
                                    .autocapitalization(.none)
                                    .autocorrectionDisabled()
                                    .offset(x: 0, y: -32.h)
                                    .accessibilityIdentifier("usernameTextField")

                                // Password field
                                ZStack {
                                    if showPassword {
                                        TextField("", text: $password, prompt: Text("Enter your password").foregroundColor(Color.white.opacity(0.4)))
                                            .foregroundColor(.white)
...
                                            .tracking(0.28)
                                            .padding(.horizontal, 16.w)
                                            .frame(width: 300.w, height: 48.h)
                                            .autocapitalization(.none)
                                            .autocorrectionDisabled()
                                            .textContentType(.password)
                                            .accessibilityIdentifier("confirmPasswordTextField")
                                            .focused($focusedField, equals: .confirmPassword)
                                    } else {
                                        SecureField("", text: $confirmPassword, prompt: Text("Confirm your password").foregroundColor(Color.white.opacity(0.4)))
                                            .foregroundColor(.white)
                                            .font(Font.custom("SFProDisplay-Regular", size: 14.f))
                                            .tracking(0.28)
...
